# Bit_projects

Steganography/: CMakeLists.txt  README.md  main.c  steganography.c  steganography.h  utils.h
ieee754-visualiser/: CMakeLists.txt  Doxyfile  README.md  main.c
